--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ vimfiles/bundle/
 vimfiles/bundle_custom/docs_cnx/
 plug.vim.old
 vimfiles/template/snippets
-vimfiles/bundle_custom/nim.vim/
+#vimfiles/bundle_custom/nim.vim/
