--- a/vimfiles/template/rust/Cargo.toml
+++ b/vimfiles/template/rust/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 #macroquad = "*"
 #bevy = { version = "0.17.2", features = ["dynamic_linking"] }
 #makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "dev" }
+#my_lib = { path = "../my_lib", features = ["live"]}
 
 #[workspace]
 #resolver = "3" # edition 2024 default 3
