--- a/vimfiles/template/rust/Cargo.toml
+++ b/vimfiles/template/rust/Cargo.toml
@@ -13,14 +13,14 @@ edition = "2024"
 #resolver = "3" # edition 2024 default 3
 
 [profile.dev]
-incremental = true # 以较小的步骤编译您的二进制文件。
-#opt-level = "s" # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
+incremental = false # 多线加速编译费空间 适合好的cpu, 关闭后编译空间会小很多
+#opt-level = 2 # debug=0,release=2, 3是极限
 
 [profile.dev.package."*"]
 opt-level = 3
 
 [profile.release]
-opt-level = "s" # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
+opt-level = 3 # 数字0~3运行速度和编译优化, s,z只是运行文件大小z是极限
 codegen-units = 1 # 允许 LLVM 执行更好的优化。
 lto = false # 启用链接时优化 false或"off"/"thin"/true或"fat" 编译速度从左到右巨减
 panic = "abort" # 通过禁用 panic 处理程序来提高性能。
